--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -93,6 +95,10 @@
     "css-loader": "^0.28.11",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "@storybook/react": "^3.4.10",
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addons": "^3.4.10"
   }
 }
